Fix spacing before search icon issue

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -123,6 +123,7 @@
 		border: none;
 		display: inline-block;
 		outline: none;
+		margin-left: 37px; 
 		padding: 0;
 		position: relative;
 		top: 3px;
